# translet

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
examples/: .env.example  .env.generic.example  show_stats.py  simple_from_env.py  simple_nvidia.py  simple_nvidia_clean.py  simple_nvidia_env.py
src/translet/: __init__.py  core.py  exceptions.py  stats.py
src/translet/llm/: __init__.py  base.py  openai_compat.py
src/translet/store/: __init__.py  base.py  dbset_store.py
src/translet/transjson/: __init__.py  _pipeline.py  key_builder.py  rule_generator.py  runner.py  service.py  validator.py
tests/: conftest.py
tests/integration/: test_dbset_store.py  test_e2e_with_fake_llm.py
tests/unit/: test_key_builder.py  test_pipeline.py  test_rule_generator.py  test_runner.py  test_validator.py
